# shape-packing-challenge

./: .gitignore  .pid_exact_explorers  PHI_DEBUG_LOG.md  PHI_RESEARCH.md  README.md  RESEARCH.aux  RESEARCH.bbl  RESEARCH.blg  RESEARCH.md  RESEARCH.out  RESEARCH.tex  _tmp_sol.json  all_log.txt  alt_topo_solution.json  bench_gjk.py  best_fingerprint.md  best_solution.json  best_solution.txt  cmaes_log.txt  cmaes_tight.py  coordinated_polish.py  deep_polish.py  deep_polish_stdout.txt  deliberate_starts.py  exact_dist.py  fast_mcmc.py  fast_run.py  fast_run_log.txt  fix_and_polish.py  flip_chunk_0.json  flip_chunk_1.json  flip_chunk_2.json  flip_chunk_3.json  flip_chunk_4.json  flip_chunk_5.json  flip_worker.py  fss.py  generator_log.txt  gjk_numba.py  gjk_optimize.py  (+95 more)
solutions/: R2.948572.json  R2.948573.json  R2.948574.json  R2.948575.json  R2.948576.json  R2.948577.json  R2.948578.json  R2.948579.json  R2.948581.json  R2.948582.json  R2.948586.json  R2.948587.json  R2.948588.json  R2.948589.json  R2.948590.json  R2.948591.json  R2.948592.json  R2.948593.json  R2.948594.json  R2.948596.json  R2.948598.json  R2.948600.json  R2.948604.json  R2.948608.json  R2.948609.json  R2.948611.json  R2.948612.json  R2.948615.json  R2.948619.json  R2.948621.json  R2.948623.json  R2.948625.json  R2.948626.json  R2.948628.json  R2.948636.json  R2.948637.json  R2.948639.json  R2.948640.json  R2.948642.json  R2.948644.json  (+105 more)
solutions/best_approx/: A2.948736_E2.949055_valid_fast_explorer_a_b1850.json  (+15 more)
tests/: test_baselines.py  test_geometry.py  test_scoring.py
(+6 files in other folders)
